# distributed-tracing

./: .gitignore  .pylintrc  README.md  distributed-tracing-blog-post.md  project-words.txt  requirements-dev.txt  requirements.txt
src/: analyze_source.py  analyze_source_ast.err  analyze_source_ast.out  analyze_source_ast.py  analyze_source_ast_utils.py  analyze_source_bedrock.py  analyze_source_model_utils.py  analyze_source_text.py  assistant.json  assistant.py  assistant.txt  assistant1.err  assistant1.json  assistant1.py  ast_utils.py  bedrock-anthropic-converse.py  bedrock-anthropic-invoke-model.py  bedrock-model-create-instance-profile.py  bedrock-model-list-inference-profiles.py  call_tracer_v12.json  config.yaml  configuration.py  content.py  custom_logger_success.py  custom_logger_trace.py  formatter.py  kwargs.py  model.py  parameterized_property.py  pyproject.toml  python3-config.yaml  python3-search-config.json  python3-search-config1.json  python3-search-config2-keep-1.json  python3-search-config2-keep-2.json  python3-search-config2-keep-3.json  python3-search-config2-keep-4.json  python3-search-config2.json  python_function_call_tracer_v10a.py  python_function_call_tracer_v11.py  (+3 more)
src/call_tracer/: README.md  call_tracer.py  call_tracer_class.py  config.yaml  main.py
src/call_tracer_viewer/: app_v4.py  app_v4.txt
src/common/: configuration.py  ctxmgr_utils.py  exceptions.py  generic_utils.py  json_utils.py  logging_utils.py  parameterized_property.py  path_utils.py  utilities.py  yaml_utils.py
src/examples/: content.py  utils.py
src/formatters/: coded_json_to_markdown_formatter.py  formatter.py  iterative_json_to_markdown_formatter.py  json_to_markdown_formatter.py  templated_iterative_json_to_markdown.py  templated_iterative_json_to_markdown_formatter.py
src/models/: anthropic_claude_3_sonnet_20240229_v1_0.py  meta_llama3-2_3b_instruct_v1-0.py  meta_llama3_2_3b_instruct_v1_0.py  model.py
src/source_analyzer/: README.md  config.yaml  configuration.py  custom_logger_success.py  custom_logger_trace.py  main.py  source_analyzer.py  source_analyzer_class.py  (+1 more)
(+50 files in other folders)
